@@ -1,10 +1,11 @@
-@comment $NetBSD: PLIST,v 1.2 2004/05/25 21:49:26 wiz Exp $
+@comment $NetBSD: PLIST,v 1.3 2004/06/20 02:36:24 xtraeme Exp $
 bin/ffmpeg
 bin/ffserver
 include/ffmpeg/avcodec.h
 include/ffmpeg/avformat.h
 include/ffmpeg/avio.h
 include/ffmpeg/common.h
+include/ffmpeg/libpostproc/postprocess.h
 include/ffmpeg/rtp.h
 include/ffmpeg/rtsp.h
 include/ffmpeg/rtspcodes.h
@@ -33,4 +34,5 @@ share/doc/ffmpeg/optimization.txt
 share/examples/ffmpeg/ffserver.conf
 @dirrm share/examples/ffmpeg
 @dirrm share/doc/ffmpeg
+@dirrm include/ffmpeg/libpostproc
 @dirrm include/ffmpeg
